force-app/main/default/objects/Product2/fields/Course_Contents_DELETE__c.field-meta.xml
<CustomField>
    <fullName>Course_Contents_DELETE__c</fullName>
    <description>Course Content in html</description>
    <label>Course Contents_DELETE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>