force-app/main/default/objects/Product2/fields/Course_Contents_Left_Column__c.field-meta.xml
<CustomField>
    <fullName>Course_Contents_Left_Column__c</fullName>
    <description>Left column of the course content to display in the Diploma</description>
    <label>Course Contents Left Column</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>