force-app/main/default/objects/Product2/fields/Course_Contents_Right_Column__c.field-meta.xml
<CustomField>
    <fullName>Course_Contents_Right_Column__c</fullName>
    <description>Right column of the course content to display in Diploma</description>
    <label>Course Contents Right Column</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>