force-app/main/default/objects/Product2/fields/Course_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Course_Documentation__c</fullName>
    <description>Link to course documentation</description>
    <label>Course Documentation</label>
    <length>150</length>
    <type>Text</type>
</CustomField>