force-app/main/default/objects/Product2/fields/Course_Exams__c.field-meta.xml
<CustomField>
    <fullName>Course_Exams__c</fullName>
    <description>Link to public Drive folder where exam pdfs are located</description>
    <label>Course Exams</label>
    <length>150</length>
    <type>Text</type>
</CustomField>