force-app/main/default/objects/Product2/fields/Course_Hours__c.field-meta.xml
<CustomField>
    <fullName>Course_Hours__c</fullName>
    <description>Duration of the course in hours</description>
    <label>Course Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>