force-app/main/default/objects/Product2/fields/Course_Questionnaire_FUNDAE__c.field-meta.xml
<CustomField>
    <fullName>Course_Questionnaire_FUNDAE__c</fullName>
    <label>Course Questionnaire (FUNDAE)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>