force-app/main/default/objects/Product2/fields/Course_Survey_url__c.field-meta.xml
<CustomField>
    <fullName>Course_Survey_url__c</fullName>
    <label>Course Survey URL</label>
    <type>Url</type>
</CustomField>