force-app/main/default/objects/Product2/fields/Exams_email_type__c.field-meta.xml
<CustomField>
    <fullName>Exams_email_type__c</fullName>
    <label>Exams email type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Attachments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>