force-app/main/default/objects/Product2/fields/pse__IsServicesProduct__c.field-meta.xml
<CustomField>
    <fullName>pse__IsServicesProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, indicates this product is a services product.</description>
    <label>Is Services Product</label>
    <type>Checkbox</type>
</CustomField>