force-app/main/default/objects/Product2/fields/Web_Description__c.field-meta.xml
<CustomField>
    <fullName>Web_Description__c</fullName>
    <description>Texto para mostrar en la Web</description>
    <label>Web Description</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>