force-app/main/default/objects/Product2/fields/Web_Tags__c.field-meta.xml
<CustomField>
    <fullName>Web_Tags__c</fullName>
    <label>Web Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Certificación</fullName>
            </value>
            <value>
                <fullName>Consultor</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Usuario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>