force-app/main/default/objects/Product2/listViews/CC_Courses_Products.listView-meta.xml
<ListView>
    <fullName>CC_Courses_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Course_Hours__c</columns>
    <columns>Course_Documentation__c</columns>
    <columns>Course_Exams__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Training</value>
    </filters>
    <label>CC Courses Products</label>
</ListView>